[package]
name = "rust-lox"
version = "0.1.0"
authors = ["Henry Swanson <henryswanson94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"
num_enum = "0.5.1"
clap = { version = "3.0.0", features = ["derive"]}

[dev-dependencies]
test-generator = "*"
regex = "*"

[features]
trace-execution = []
print-chunks = []
